added email client