@@ -2,6 +2,7 @@ package com.katanemimena.backend.jwt;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.katanemimena.backend.authorized.AuthorizedUserDetails;
+import com.katanemimena.backend.authorized.AuthorizedUserRepository;
 import io.fusionauth.jwt.Signer;
 import io.fusionauth.jwt.domain.JWT;
 import io.fusionauth.jwt.hmac.HMACSigner;
@@ -18,18 +19,21 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 
 public class CustomAuthenticationFilter extends UsernamePasswordAuthenticationFilter {
 
     private final AuthenticationManager authenticationManager;
-    public CustomAuthenticationFilter(AuthenticationManager authenticationManager) {
+
+    private final AuthorizedUserRepository authorizedUserRepository;
+    public CustomAuthenticationFilter(AuthenticationManager authenticationManager, AuthorizedUserRepository authorizedUserRepository) {
         this.authenticationManager = authenticationManager;
+        this.authorizedUserRepository = authorizedUserRepository;
     }
 
     @Override
@@ -49,22 +53,17 @@ public class CustomAuthenticationFilter extends UsernamePasswordAuthenticationFi
     protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, Authentication authResult) throws IOException, ServletException {
 
         AuthorizedUserDetails user =(AuthorizedUserDetails) authResult.getPrincipal();
+        authorizedUserRepository.setLastLogin(user.getUsername(), LocalDateTime.now().withNano(0).toString());
         Signer signer= HMACSigner.newSHA256Signer("secretKey") ;
-//        String accessToken= JWT.create()
-//                        .withSubject(user.getUsername())
-//                .withExpiresAt(new Date(System.currentTimeMillis() +20*60*100000000))
-//                .withIssuer(request.getRequestURI())
-//                .withClaim("role", user.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()))
-//                .sign(algorithm);
+
         JWT accessToken = new JWT().setIssuer(request.getRequestURI())
                 .setIssuedAt(ZonedDateTime.now(ZoneOffset.UTC))
                 .setExpiration(ZonedDateTime.now(ZoneOffset.UTC).plusMinutes(60))
                 .setSubject(user.getUsername())
-                .addClaim("role", user.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
+                .setUniqueId(user.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList().get(0));
 
 
-
-        io.fusionauth.jwt.domain.JWT refreshToken = new JWT().setIssuer(request.getRequestURI())
+        JWT refreshToken = new JWT().setIssuer(request.getRequestURI())
                 .setIssuedAt(ZonedDateTime.now(ZoneOffset.UTC))
                 .setExpiration(ZonedDateTime.now(ZoneOffset.UTC).plusMinutes(60))
                 .setSubject(user.getUsername());
@@ -78,9 +77,5 @@ public class CustomAuthenticationFilter extends UsernamePasswordAuthenticationFi
         response.setHeader("Access-Control-Allow-Origin", "*");
         response.setContentType(String.valueOf(MediaType.APPLICATION_JSON));
         new ObjectMapper().writeValue(response.getOutputStream(), tokens);
-        System.out.println("ORIGINAL"+accessToken.toString());
-        System.out.println("\nENCODED"+encodedAccessToken);
-
-
     }
 }
